# compiler-design

./: Makefile  parser  pyproject.toml  y.tab.c  y.tab.h
assignment-1/mini-language/: example.l  first  lex.l  lex.yy.c  prep.md  prompt.md  source.mini
assignment-1/mini-language/diagrams/dfa/: assignment.planuml  mini_dfa_construction_simulation.ipynb
assignment-1/mini-language/diagrams/nfa/: if.plantuml  mini_nfa_development_simulation (2).ipynb  number.plantuml
assignment-1/number_counter/: lex.yy.c  numbers_counter
assignment-1/valid_c_cpp_java_checker/: c_checker.l  checker  lex.yy.c
assignment-1/valid_c_cpp_java_checker/cpp_checker/: lex.l  source.cpp
assignment-1/valid_c_cpp_java_checker/java_checker/: lex.l  source.c
assignment-1/vowel_counter/: lex.yy.c  vowel_counter  vowel_counter.l
chapter-2/mini-language/diagrams/dfa/: mini_dfa_construction_simulation.ipynb
chapter-2/mini-language/implementation/: prep.md
chapter-2/number_counter/: lex.l  source.c
chapter-2/valid_c_cpp_java_checker/c_checker/: lex.l
chapter-2/valid_c_cpp_java_checker/java_checker/: source.java
chapter-3/implementation/: mini_parser  y.tab.c
chapter-3/mini-language/: README.md
chapter-3/mini-language/analysis/: mini_full_parsing_analysis.ipynb
chapter-3/mini-language/implementation/: lex.yy.c  mini.l  mini.y  source.mini  y.tab.h
chapter-3/mini_parser_details/: mini_full_parsing_analysis.ipynb
lex-and-yacc/: example_1.l  example_2  example_2.l  example_3  example_3.l  lex.yy.c
lex-and-yacc/yacc/: sentence_parser.y  test.txt  word_recognizer.l
(+7 files in other folders)
