[project]
name = "compiler-design"
version = "0.1.0"
description = ""
authors = [
    {name = "ffekirnew",email = "ffekirnew0808@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "graphviz (>=0.20.3,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
